@startuml

title __MQTT's Class Diagram__\n

  namespace com.xiaoma {
    namespace mqtt {
      class com.xiaoma.mqtt.MQTTService {
          {static} + TAG : String
          {static} - client : MqttAndroidClient
          - clientId : String
          - conOpt : MqttConnectOptions
          - host : String
          - iMqttActionListener : IMqttActionListener
          - mqttCallback : MqttCallback
          {static} - myTopic : String
          - passWord : String
          - userName : String
          + onBind()
          + onCreate()
          + onDestroy()
          + onStartCommand()
          + onUnbind()
          {static} + publish()
          - doClientConnection()
          - init()
          - isConnectIsNomarl()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace mqtt {
      class com.xiaoma.mqtt.MQTTService.MyBinder {
          + getserver()
      }
    }
  }
  

  com.xiaoma.mqtt.MQTTService -up-|> android.app.Service
  com.xiaoma.mqtt.MQTTService o-- com.xiaoma.mqtt.MQTTService.MyBinder : binder
  com.xiaoma.mqtt.MQTTService +-down- com.xiaoma.mqtt.MQTTService.MyBinder
  com.xiaoma.mqtt.MQTTService.MyBinder -up-|> android.os.Binder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
